# glesx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  glesx-config.cmake.in
include/GLES3/: gl3.h  gl3ext.h
ios/include/GLES2/: gl2.h
